# Glowstone

./: .gitignore  README.md  contributing.md  notes.md  pyproject.toml  requirements.txt
assets/forge/: forgeinstaller.txt  whatlibrariesforgeinstalls.txt
glowstone/: __main__.py  app.py
glowstone/api/: fabric.py
glowstone/installer/: __init__.py  fabric.py  forge.py
