[tool.poetry]
name = "glowstone"
version = "0.1.0"
description = ""
authors = ["BD103 <dont@stalk.me>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
isort = "^5.9.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
